--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "YAWA",
-  "version": "0.0.1",
+  "version": "0.1.0",
   "private": true,
   "scripts": {
+    "preinstall": "npx only-allow yarn",
     "android": "react-native run-android",
     "ios": "react-native run-ios",
     "lint": "eslint .",
@@ -10,8 +11,12 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-navigation/native": "^6.1.6",
     "react": "18.2.0",
-    "react-native": "0.71.4"
+    "react-native": "0.71.4",
+    "react-native-paper": "^5.5.1",
+    "react-native-safe-area-context": "^4.5.0",
+    "recoil": "^0.7.7"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
@@ -23,10 +28,10 @@
     "@types/react": "^18.0.24",
     "@types/react-test-renderer": "^18.0.0",
     "babel-jest": "^29.2.1",
-    "eslint": "^8.19.0",
+    "eslint": "^8.36.0",
     "jest": "^29.2.1",
     "metro-react-native-babel-preset": "0.73.8",
-    "prettier": "^2.4.1",
+    "prettier": "^2.8.7",
     "react-test-renderer": "18.2.0",
     "typescript": "4.8.4"
   },
