--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "preinstall": "npx only-allow yarn",
     "android": "react-native run-android",
     "ios": "react-native run-ios",
-    "lint": "eslint .",
+    "lint": "eslint . --fix",
+    "format": "prettier --write \"src/**/*.ts\"",
     "start": "react-native start",
     "test": "jest"
   },
@@ -23,10 +24,13 @@
     "@babel/preset-env": "^7.20.0",
     "@babel/runtime": "^7.20.0",
     "@react-native-community/eslint-config": "^3.2.0",
+    "@trivago/prettier-plugin-sort-imports": "^4.1.1",
     "@tsconfig/react-native": "^2.0.2",
     "@types/jest": "^29.2.1",
     "@types/react": "^18.0.24",
     "@types/react-test-renderer": "^18.0.0",
+    "@typescript-eslint/eslint-plugin": "^5.56.0",
+    "@typescript-eslint/parser": "^5.56.0",
     "babel-jest": "^29.2.1",
     "eslint": "^8.36.0",
     "jest": "^29.2.1",
