--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.17.12",
     "@react-navigation/native": "^6.1.6",
+    "@react-navigation/native-stack": "^6.9.12",
     "axios": "^1.3.4",
     "react": "18.2.0",
     "react-native": "0.71.4",
     "react-native-paper": "^5.5.1",
     "react-native-safe-area-context": "^4.5.0",
+    "react-native-screens": "^3.20.0",
     "react-native-toast-message": "^2.1.6",
     "recoil": "^0.7.7"
   },
