--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-native-async-storage/async-storage": "^1.17.12",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
+    "@reduxjs/toolkit": "^1.9.3",
     "axios": "^1.3.4",
     "react": "18.2.0",
     "react-native": "0.71.4",
@@ -22,7 +23,8 @@
     "react-native-safe-area-context": "^4.5.0",
     "react-native-screens": "^3.20.0",
     "react-native-toast-message": "^2.1.6",
-    "recoil": "^0.7.7"
+    "react-redux": "^8.0.5",
+    "redux-thunk": "^2.4.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
