--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -168,3 +168,6 @@ dependencies {
 }
 
 apply from: file("../../node_modules/@react-native-community/cli-platform-android/native_modules.gradle"); applyNativeModulesAppBuildGradle(project)
+
+// CUSTOM: https://github.com/oblador/react-native-vector-icons#android
+apply from: "../../node_modules/react-native-vector-icons/fonts.gradle"
