--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "axios": "^1.3.4",
     "react": "18.2.0",
     "react-native": "0.71.4",
+    "react-native-keychain": "^8.1.1",
     "react-native-paper": "^5.5.1",
     "react-native-safe-area-context": "^4.5.0",
     "react-native-screens": "^3.20.0",
