--- a/package.json
+++ b/package.json
@@ -14,14 +14,20 @@
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.17.12",
     "@react-native-community/netinfo": "^9.3.7",
+    "@react-native-picker/picker": "^2.4.9",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
     "@reduxjs/toolkit": "^1.9.3",
     "axios": "^1.3.4",
+    "luxon": "^3.3.0",
+    "moment-timezone": "^0.5.42",
     "react": "18.2.0",
     "react-native": "0.71.4",
+    "react-native-device-info": "^10.5.0",
     "react-native-keychain": "^8.1.1",
+    "react-native-localize": "^2.2.6",
     "react-native-paper": "^5.5.1",
+    "react-native-paper-dates": "^0.15.1",
     "react-native-safe-area-context": "^4.5.0",
     "react-native-screens": "^3.20.0",
     "react-native-toast-message": "^2.1.6",
@@ -37,6 +43,7 @@
     "@trivago/prettier-plugin-sort-imports": "^4.1.1",
     "@tsconfig/react-native": "^2.0.2",
     "@types/jest": "^29.2.1",
+    "@types/luxon": "^3.2.0",
     "@types/react": "^18.0.24",
     "@types/react-test-renderer": "^18.0.0",
     "@typescript-eslint/eslint-plugin": "^5.56.0",
