--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.0.0",
     "@react-native-async-storage/async-storage": "^1.17.12",
     "@react-native-community/netinfo": "^9.3.7",
     "@react-native-picker/picker": "^2.4.9",
@@ -33,7 +34,8 @@
     "react-native-toast-message": "^2.1.6",
     "react-native-vector-icons": "^9.2.0",
     "react-redux": "^8.0.5",
-    "redux-thunk": "^2.4.2"
+    "redux-thunk": "^2.4.2",
+    "zod": "^3.21.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
