--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@hookform/resolvers": "^3.0.0",
     "@react-native-async-storage/async-storage": "^1.17.12",
+    "@react-native-community/datetimepicker": "^7.0.1",
     "@react-native-community/netinfo": "^9.3.7",
     "@react-native-picker/picker": "^2.4.9",
     "@react-navigation/native": "^6.1.6",
@@ -29,7 +30,6 @@
     "react-native-keychain": "^8.1.1",
     "react-native-localize": "^2.2.6",
     "react-native-paper": "^5.5.1",
-    "react-native-paper-dates": "^0.15.1",
     "react-native-safe-area-context": "^4.5.0",
     "react-native-screens": "^3.20.0",
     "react-native-toast-message": "^2.1.6",
