--- a/ios/Podfile
+++ b/ios/Podfile
@@ -1,6 +1,7 @@
 require_relative '../node_modules/react-native/scripts/react_native_pods'
 require_relative '../node_modules/@react-native-community/cli-platform-ios/native_modules'
 
+# CUSTOM
 pod 'RNVectorIcons', :path => '../node_modules/react-native-vector-icons'
 
 platform :ios, min_ios_version_supported
