--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-native-keychain": "^8.1.1",
     "react-native-localize": "^2.2.6",
     "react-native-paper": "^5.5.1",
+    "react-native-picker-select": "^8.0.4",
     "react-native-safe-area-context": "^4.5.0",
     "react-native-screens": "^3.20.0",
     "react-native-toast-message": "^2.1.6",
