--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-native-dialog": "^9.3.0",
     "react-native-keychain": "^8.1.1",
     "react-native-localize": "^2.2.6",
+    "react-native-modal-datetime-picker": "^15.0.0",
     "react-native-paper": "^5.5.1",
     "react-native-picker-select": "^8.0.4",
     "react-native-safe-area-context": "^4.5.0",
